prover-ray/zkcdriver/testdata/synced/invalid/continue_02.zkc
//error:5:5-13:continue outside loop
fn f(x:u8) -> (r:u8) {
  r = 0
  if x == 0 {
    continue
  }
  return
}
